# family-accounting

./: .gitignore  README.md  pyproject.toml
documentation/: API_specification.md
family_acc/: application.py  manage.py  requirements.txt
family_acc/.ebextensions/: https.config
family_acc/family_acc/: api_views.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
family_acc/members/: admin.py  api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
family_acc/members/migrations/: 0001_initial.py  0002_rename_members_member.py  0003_rename_firstname_member_firstname.py  0004_rename_firstname_member_firstname_and_more.py
family_acc/members/templates/: 404.html  all_members.html  details.html  first.html  login.html  main.html  master.html  member_edit.html  register.html  test_template.html
family_acc/productionfiles/: get_currency.js  global.css
family_acc/staticfiles/: global.css  listeners.js
family_acc/templates/: 404.html  home.html  layout copy.html  layout.html  test.html
family_acc/templates/registration/: password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.txt  password_reset_email_old.html  password_reset_form.html
family_acc/tests/: test_api.py  test_api_transactions.py  test_authorisation.py  test_forms.py  test_models.py  test_views.py
family_acc/transactions/: admin.py  api_views.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
family_acc/transactions/migrations/: 0001_initial.py
(+36 files in other folders)
