[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "family-accounting"
version = "0.1.0"
description = "Personal family accounting app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2",
    "djangorestframework",
]

[tool.setuptools]
packages = ["family_acc"]
